added content to landing page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <!--Page Title-->
-    <title>Namari - Free Landing Page Template</title>
+    <title>Gyaviira's Simple Technologies Better Lives</title>
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="">
@@ -144,13 +144,13 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>A FREE AND SIMPLE LANDING PAGE</h1>
-                    <h2>Namari is a free landing page template you can use for your projects. It is free to use for your
-                        personal and commercial projects, enjoy!</h2>
+                    <h1>GYAVIIRA'S WEB SERVICES</h1>
+                    <h2>Simple Technologies Better Lives (STBL) is a company that deals in providing state of the art web solutions to individuals,
+                        small enterprises and community based organizations</h2>
                 </div>
 
                 <!--Call to Action-->
-                <a href="#" class="button">START CREATING TODAY</a>
+                <a href="#" class="button">LETS INNOVATE TODAY</a>
                 <!--End Call to Action-->
 
             </div>
@@ -169,9 +169,8 @@
                 <div class="col-3">
                     <div class="section-heading">
                         <h3>SUCCESS</h3>
-                        <h2 class="section-title">How We Help You To Sell Your Product</h2>
-                        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                        <h2 class="section-title">How We Help You Incease online Visibility</h2>
+                        <p class="section-subtitle">We create appealing interractive websites, web apps and mobile applications to host your data and applications !</p>
                     </div>
 
                 </div>
@@ -187,8 +186,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>HTML5 &amp; CSS3</h4>
-                            <p>Has ne tritani atomorum conclusionemque, in dolorum volumus cotidieque eum. At vis choro
-                                neglegentur iudico</p>
+                            <p>We use up to date software such as HTML5, CSS, Bootstrap5, Javascript, React among others</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -202,8 +200,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Easy to Use</h4>
-                            <p>Cu vero ipsum vim, doctus facilisi sea in. Eam ex falli honestatis repudiandae, sit
-                                detracto mediocrem disputationi</p>
+                            <p>We build easy to use viewes for our clients and ensure full time functionality of our products</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -217,8 +214,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Fully Responsive</h4>
-                            <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
-                                nemore vivendum</p>
+                            <p>Our applications are fully responsive to user demands and scale o fast with user needs</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -232,8 +228,7 @@
                         <!--Icon Block Description-->
                         <div class="icon-block-description">
                             <h4>Parallax Effect</h4>
-                            <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
-                                nemore vivendum</p>
+                            <p>Give us a try, you won't be disappointed.</p>
                         </div>
                     </div>
                     <!--End of Icon Block-->
@@ -278,10 +273,8 @@
                 <div class="col-3">
                     <!--User Testimonial-->
                     <blockquote class="testimonial text-right bigtest">
-                        <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua</q>
-                        <footer>— John Doe, Happy Customer</footer>
+                        <q>We have worked for some clients and this is what they had to say</q>
+                        <footer>— OLSK, Happy Customer</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
 
@@ -293,8 +286,7 @@
                     <div class="section-heading">
                         <h3>BELIEVING</h3>
                         <h2 class="section-title">Focusing On What Matters Most</h2>
-                        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+                        <p class="section-subtitle">We focus on what matters most for our client. Our needs survey looks out for the most important aspects of the client</p>
                     </div>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                         totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
