--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <!--Page Title-->
-    <title>Gyaviira's Simple Technologies Better Lives</title>
+    <title>Simple Technologies Better Lives</title>
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="">
