rectified the title

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>GYAVIIRA'S WEB SERVICES</h1>
+                    <h1>WE OFFER WEB SERVICES</h1>
                     <h2>Simple Technologies Better Lives (STBL) is a company that deals in providing state of the art web solutions to individuals,
                         small enterprises and community based organizations</h2>
                 </div>
