added changes in the main content

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 <a href="#banner">Home</a>
                             </li>
                             <li>
-                                <a href="#about">About</a>
+                                <a href="#about">About Us</a>
                             </li>
                             <li>
                                 <a href="#gallery">Gallery</a>
@@ -119,10 +119,10 @@
                                 <a href="#services">Services</a>
                             </li>
                             <li>
-                                <a href="#testimonials">Testimonials</a>
+                                <a href="#testimonials">Projects</a>
                             </li>
                             <li>
-                                <a href="#clients">Clients</a>
+                                <a href="#clients">Children</a>
                             </li>
                             <!-- <li>
                                 <a href="#pricing">Pricing</a>
